--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -171,6 +171,12 @@ spec:
         to a non-TLS registry)
       type: string
       default: "true"
+    - name: WORKINGDIR_MOUNT
+      description: Mount the current working directory into the build using
+        --volume $PWD:/$WORKINGDIR_MOUNT. Note that the $PWD will be the context
+        directory for the build (see the CONTEXT param).
+      type: string
+      default: ""
     - name: YUM_REPOS_D_FETCHED
       description: Path in source workspace where dynamically-fetched repos
         are present
@@ -273,6 +279,8 @@ spec:
         value: $(params.TARGET_STAGE)
       - name: TLSVERIFY
         value: $(params.TLSVERIFY)
+      - name: WORKINGDIR_MOUNT
+        value: $(params.WORKINGDIR_MOUNT)
       - name: YUM_REPOS_D_FETCHED
         value: $(params.YUM_REPOS_D_FETCHED)
       - name: YUM_REPOS_D_SRC
@@ -716,6 +724,18 @@ spec:
           cp -r --preserve=mode "$ENTITLEMENT_PATH" /tmp/entitlement
           VOLUME_MOUNTS+=(--volume /tmp/entitlement:/etc/pki/entitlement)
           echo "Adding the entitlement to the build"
+        fi
+
+        if [ -n "$WORKINGDIR_MOUNT" ]; then
+          if [[ "$WORKINGDIR_MOUNT" == *:* ]]; then
+            echo "WORKINGDIR_MOUNT contains ':'" >&2
+            echo "Refusing to proceed in case this is an attempt to set unexpected mount options." >&2
+            exit 1
+          fi
+          # ${SOURCE_CODE_DIR}/${CONTEXT} will be the $PWD when we call 'buildah build'
+          # (we set the workdir using 'unshare -w')
+          context_dir=$(realpath "${SOURCE_CODE_DIR}/${CONTEXT}")
+          VOLUME_MOUNTS+=(--volume "$context_dir:${WORKINGDIR_MOUNT}")
         fi
 
         if [ -n "${ADDITIONAL_VOLUME_MOUNTS-}" ]; then
