--- a/.github/workflows/check-ta.yaml
+++ b/.github/workflows/check-ta.yaml
@@ -7,7 +7,7 @@ name: Validate PR - Trusted Artifact variants
 jobs:
   go:
     name: Check Trusted Artifact variants
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out code
         uses: actions/checkout@v4
