adding request and limits for CPU and Memory for push-dockerfile task

--- a/task/push-dockerfile/0.1/push-dockerfile.yaml
+++ b/task/push-dockerfile/0.1/push-dockerfile.yaml
@@ -70,6 +70,12 @@ spec:
       value: $(params.ARTIFACT_TYPE)
     - name: IMAGE_REF_RESULT
       value: $(results.IMAGE_REF.path)
+    computeResources:
+      limits:
+        memory: 1Gi
+      requests:
+        cpu: 100m
+        memory: 1Gi
     script: |
       set -eu
       set -o pipefail
