lowering requested memory to 256Mi for push-dockerfile task

--- a/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
+++ b/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
@@ -135,7 +135,7 @@ spec:
           yq '.reference' | tr -d '\r\n' >"$IMAGE_REF_RESULT"
       computeResources:
         limits:
-          memory: 1Gi
+          memory: 256Mi
         requests:
           cpu: 100m
-          memory: 1Gi
+          memory: 256Mi
