--- a/task/push-dockerfile/0.1/push-dockerfile.yaml
+++ b/task/push-dockerfile/0.1/push-dockerfile.yaml
@@ -72,10 +72,10 @@ spec:
       value: $(results.IMAGE_REF.path)
     computeResources:
       limits:
-        memory: 1Gi
+        memory: 256Mi
       requests:
         cpu: 100m
-        memory: 1Gi
+        memory: 256Mi
     script: |
       set -eu
       set -o pipefail
