buildah etc.: run syft on oci-dir, not oci-archive
Syft refuses to extract a large blob from an oci-archive. It fails with:

    [0001] ERROR could not determine source:
    an error occurred attempting to resolve 'big-image.tar':
    oci-archive: failed to visit tar entry="blobs/sha256/..." :
    zip read limit hit (potential decompression bomb attack):
    copied 2147483648, limit 2147483648

Syft has no such reservations about processing an equally large blob in
an oci-dir.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-min/0.4/buildah-min.yaml
+++ b/task/buildah-min/0.4/buildah-min.yaml
@@ -580,8 +580,8 @@ spec:
       done
 
       image_name=$(echo "${IMAGE##*/}" | tr ':' '-')
-      buildah push "$IMAGE" oci-archive:"/shared/$image_name.tar"
-      echo "/shared/$image_name.tar" > /shared/container_path
+      buildah push "$IMAGE" oci:"/shared/$image_name.oci"
+      echo "/shared/$image_name.oci" > /shared/container_path
 
       echo "[$(date --utc -Ins)] End build"
     securityContext:
@@ -705,7 +705,7 @@ spec:
       echo "Running syft on the source directory"
       syft dir:"$(workspaces.source.path)/$SOURCE_CODE_DIR/$CONTEXT" --output "$syft_sbom_type"="$(workspaces.source.path)/sbom-source.json"
       echo "Running syft on the image"
-      syft oci-archive:"$(cat /shared/container_path)" --output "$syft_sbom_type"="$(workspaces.source.path)/sbom-image.json"
+      syft oci-dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="$(workspaces.source.path)/sbom-image.json"
 
       echo "[$(date --utc -Ins)] End sbom-syft-generate"
     volumeMounts:
