cachi2 -> hermeto generic string replacements
These include:
- verbatim cachi2 -> hermeto string replacements
- contextual cachi2 -> prefetch string replacements
- sometimes the word cachi2 is contextually dropped completely
- Github README "docs" links replaced with Hermeto's new autogenerated
  'Read The Docs' style documentation links

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/pipelines/docker-build/docker-build.yaml
+++ b/pipelines/docker-build/docker-build.yaml
@@ -64,7 +64,7 @@ spec:
     name: hermetic
     type: string
   - default: ""
-    description: Build dependencies to be prefetched by Cachi2
+    description: Build dependencies to be prefetched
     name: prefetch-input
     type: string
   - default: ""
