--- a/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
+++ b/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
@@ -430,8 +430,8 @@ spec:
 
         sboms_to_merge=(syft:sbom-source.json syft:sbom-image.json)
 
-        if [ -f "sbom-cachi2.json" ]; then
-          sboms_to_merge+=(cachi2:sbom-cachi2.json)
+        if [ -f "sbom-prefetch.json" ]; then
+          sboms_to_merge+=(hermeto:sbom-prefetch.json)
         fi
 
         echo "Merging sboms: (${sboms_to_merge[*]}) => sbom.json"
