--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -783,10 +783,10 @@ spec:
 
         echo "[$(date --utc -Ins)] Add metadata"
 
-        # Save the SBOM produced by Cachi2 so it can be merged into the final SBOM later
+        # Save the SBOM produced in prefetch so it can be merged into the final SBOM later
         if [ -f "/tmp/cachi2/output/bom.json" ]; then
-          echo "Making copy of sbom-cachi2.json"
-          cp /tmp/cachi2/output/bom.json ./sbom-cachi2.json
+          echo "Making copy of sbom-prefetch.json"
+          cp /tmp/cachi2/output/bom.json ./sbom-prefetch.json
         fi
 
         touch /shared/base_images_digests
