--- a/task/prefetch-dependencies-oci-ta/0.2/recipe.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/recipe.yaml
@@ -23,10 +23,10 @@ additionalSteps:
         echo -n "" > $(results.CACHI2_ARTIFACT.path)
       fi
 description: |-
-    Task that uses Cachi2 to prefetch build dependencies. The fetched dependencies and the
+    Task that uses Hermeto to prefetch build dependencies. The fetched dependencies and the
     application source code are stored as a trusted artifact in the provided OCI repository.
-    For additional info on Cachi2, see docs at
-    https://github.com/containerbuildsystem/cachi2#basic-usage.
+    For additional info on Hermeto, see docs at
+    https://hermetoproject.github.io/hermeto/#basic-usage
 
     ## Configuration
 
@@ -44,7 +44,7 @@ description: |-
           subprocess_timeout: 3600
     ```
 
-    [available configuration parameters]: https://github.com/containerbuildsystem/cachi2?tab=readme-ov-file#available-configuration-parameters
+    [available configuration parameters]: https://hermetoproject.github.io/hermeto/#available-configuration-parameters
 preferStepTemplate: true
 removeWorkspaces:
   - source
