--- a/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
+++ b/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
@@ -172,11 +172,11 @@ spec:
           UNSHARE_ARGS+=("--net")
         fi
 
-        HERMETO_MOUNT=""
-        HERMETO_SOURCE=""
+        PREFETCH_MOUNT=""
+        PREFETCH_SOURCE=""
         if [ -d "/var/workdir/cachi2" ]; then
-          HERMETO_MOUNT="--volume /var/workdir/cachi2:/cachi2"
-          HERMETO_SOURCE=". /cachi2/cachi2.env &&"
+          PREFETCH_MOUNT="--volume /var/workdir/cachi2:/cachi2"
+          PREFETCH_SOURCE=". /cachi2/cachi2.env &&"
         fi
 
         # Create the script file
@@ -185,7 +185,7 @@ spec:
 
         mkdir /var/workdir/output
         buildah from --name script-container "$SCRIPT_RUNNER_IMAGE"
-        BUILDAH_CMD="buildah run ${HERMETO_MOUNT} --volume /tmp/script.sh:/tmp/script.sh --volume /var/workdir/source:/var/workdir/source --volume /var/workdir/output:/var/workdir/output --workingdir ${SCRIPT_WORKDIR} --user root:root -- script-container /bin/sh -c '${HERMETO_SOURCE} SCRIPT_OUTPUT=/var/workdir/output/output SCRIPT_OUTPUT_ARRAY=/var/workdir/output/array exec /tmp/script.sh'"
+        BUILDAH_CMD="buildah run ${PREFETCH_MOUNT} --volume /tmp/script.sh:/tmp/script.sh --volume /var/workdir/source:/var/workdir/source --volume /var/workdir/output:/var/workdir/output --workingdir ${SCRIPT_WORKDIR} --user root:root -- script-container /bin/sh -c '${PREFETCH_SOURCE} SCRIPT_OUTPUT=/var/workdir/output/output SCRIPT_OUTPUT_ARRAY=/var/workdir/output/array exec /tmp/script.sh'"
         unshare -Uf "${UNSHARE_ARGS[@]}" --keep-caps -r --map-users 1,1,65536 --map-groups 1,1,65536 -w /var/workdir sh -c "${BUILDAH_CMD}"
 
         IMAGE_REFERENCE=$(buildah inspect script-container | jq -r '.FromImage')
