--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -41,7 +41,7 @@ spec:
       name: hermetic
       type: string
       default: "false"
-    - description: Build dependencies to be prefetched by Cachi2
+    - description: Build dependencies to be prefetched
       name: prefetch-input
       type: string
       default: ""
