--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/recipe.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/recipe.yaml
@@ -22,10 +22,10 @@ additionalSteps:
         echo -n "" > $(results.CACHI2_ARTIFACT.path)
       fi
 description: |-
-    Task that uses Cachi2 to prefetch build dependencies. The fetched dependencies and the
+    Task that uses Hermeto to prefetch build dependencies. The fetched dependencies and the
     application source code are stored as a trusted artifact in the provided OCI repository.
-    For additional info on Cachi2, see docs at
-    https://github.com/containerbuildsystem/cachi2#basic-usage.
+    For additional info on Hermeto, see docs at
+    https://hermetoproject.github.io/hermeto/#basic-usage
 preferStepTemplate: true
 removeWorkspaces:
   - source
