--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -344,19 +344,19 @@ spec:
       fi
       unset RETRY_MAX_TRIES
 
-      cachi2 --log-level="$LOG_LEVEL" $config_flag fetch-deps \
+      hermeto --log-level="$LOG_LEVEL" $config_flag fetch-deps \
       $dev_pacman_flag \
       --source="$(workspaces.source.path)/source" \
       --output="$(workspaces.source.path)/cachi2/output" \
       --sbom-output-type="$SBOM_TYPE" \
       "${INPUT}"
 
-      cachi2 --log-level="$LOG_LEVEL" generate-env "$(workspaces.source.path)/cachi2/output" \
+      hermeto --log-level="$LOG_LEVEL" generate-env "$(workspaces.source.path)/cachi2/output" \
       --format env \
       --for-output-dir=/cachi2/output \
       --output "$(workspaces.source.path)/cachi2/cachi2.env"
 
-      cachi2 --log-level="$LOG_LEVEL" inject-files "$(workspaces.source.path)/cachi2/output" \
+      hermeto --log-level="$LOG_LEVEL" inject-files "$(workspaces.source.path)/cachi2/output" \
       --for-output-dir=/cachi2/output
 
       # hack: the OCI generator would delete the function since it doesn't consider trap a "usage"
