--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -414,19 +414,19 @@ spec:
         fi
         unset RETRY_MAX_TRIES
 
-        cachi2 --log-level="$LOG_LEVEL" $config_flag fetch-deps \
+        hermeto --log-level="$LOG_LEVEL" $config_flag fetch-deps \
           $dev_pacman_flag \
           --source="/var/workdir/source" \
           --output="/var/workdir/cachi2/output" \
           --sbom-output-type="$SBOM_TYPE" \
           "${INPUT}"
 
-        cachi2 --log-level="$LOG_LEVEL" generate-env "/var/workdir/cachi2/output" \
+        hermeto --log-level="$LOG_LEVEL" generate-env "/var/workdir/cachi2/output" \
           --format env \
           --for-output-dir=/cachi2/output \
           --output "/var/workdir/cachi2/cachi2.env"
 
-        cachi2 --log-level="$LOG_LEVEL" inject-files "/var/workdir/cachi2/output" \
+        hermeto --log-level="$LOG_LEVEL" inject-files "/var/workdir/cachi2/output" \
           --for-output-dir=/cachi2/output
 
         # hack: the OCI generator would delete the function since it doesn't consider trap a "usage"
