sast-coverity-check: fix IMAGE param description
Users were confused about the IMAGE parameter of the sast-coverity-check
task. Explain that the parameter is mostly irrelevant.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
@@ -90,7 +90,10 @@ spec:
       type: string
       default: "false"
     - name: IMAGE
-      description: Reference of the image buildah will produce.
+      description: The task will build a container image and tag it locally
+        as $IMAGE, but will not push the image anywhere. Due to the relationship
+        between this task and the buildah task, the parameter is required,
+        but its value is mostly irrelevant.
       type: string
     - name: IMAGE_EXPIRES_AFTER
       description: Delete image tag after specified time. Empty means to keep
