--- a/task/sast-coverity-check/0.3/patch.yaml
+++ b/task/sast-coverity-check/0.3/patch.yaml
@@ -14,6 +14,13 @@
   value: |-
     Scans source code for security vulnerabilities, including common issues such as SQL injection, cross-site scripting (XSS), and code injection attacks using Coverity.
 
+# IMAGE param description
+- op: replace
+  path: /spec/params/0/description
+  value: >-
+    The task will build a container image and tag it locally as $IMAGE, but will not push the image anywhere.
+    Due to the relationship between this task and the buildah task, the parameter is required, but its value is mostly irrelevant.
+
 # Replace task results
 - op: replace
   path: /spec/results
