--- a/task/sast-coverity-check/0.3/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.3/sast-coverity-check.yaml
@@ -14,7 +14,9 @@ spec:
     such as SQL injection, cross-site scripting (XSS), and code injection attacks
     using Coverity.
   params:
-  - description: Reference of the image buildah will produce.
+  - description: The task will build a container image and tag it locally as $IMAGE,
+      but will not push the image anywhere. Due to the relationship between this task
+      and the buildah task, the parameter is required, but its value is mostly irrelevant.
     name: IMAGE
     type: string
   - default: ./Dockerfile
